# rukavychka

./: .gitlab-ci.yml  CMakeLists.txt  README.md
data/: com.holypangolin.Rukavychka.appdata.xml  obj.flac  player1.flac  player2.flac  rukavychka.desktop  synth.flac  win.flac
data/icons/: icon.rc  rukavychka.icns  superexamples.icns
data/maemo5/sprites/transition/: still.ini
data/shaders/: alpha.glsl  combine.glsl
data/sprites/lisek/: idle.ini  walk.ini  walk2.ini
data/sprites/myszka/: myszka.ini
data/sprites/ogien/: ogien.ini
data/sprites/smok/: smok.ini
data/sprites/transition/: mikro_max.ini  still.ini
data/vita/sce_sys/livearea/contents/: template.xml
data/vita/shaders/: alpha.glsl  combine.glsl  vertex.glsl
flatpak/: com.holypangolin.Rukavychka.json  net.dosowisko.SuperExamples.json
html/: index.html
src/: common.c  common.h  main.c
src/gamestates/: dosowisko.c  example.c  game.c  holypangolin.c  loading.c
